add back quick start and dates

--- a/index.html
+++ b/index.html
@@ -120,6 +120,90 @@
     </section>
   
   
+   <section id="method">
+    <div class="container">
+      <div class="row method-container">
+        <div class="section-header">
+          <div class="col-lg-12 col-md-12">
+            <h2>Getting Started</h2>
+            Do you want to participate? Register in our <a href="https://eval.ai/web/challenges/challenge-page/1190">EvalAI site</a>
+             and start downloading and installing the required infrastructure: <a href="http://svl.stanford.edu/igibson/docs/installation.html">a new version of iGibson</a>, our simulation environment for interactive tasks, extended now to new object states for BEHAVIOR, the BEHAVIOR Dataset of Objects and the  iGibson2.0 Dataset of Scenes (combined in our <a href="https://storage.googleapis.com/gibson_scenes/behavior_data_bundle.zip">participation bundle</a>), with object and house models to participate in the challenge, and <a href="https://github.com/StanfordVL/BehaviorChallenge2021/">our starter code</a>, with examplest to train againts in the tasks. If you want to use human demonstrations to start developing your solutions, you can also download <a href="human_demonstrations/human_demonstrations.html">the BEHAVIOR Dataset of Human Demonstrations</a> in virtual reality. For more details, please visit our <a href="https://docs.google.com/document/d/1u2m9Ld6Qo3eG-fvCzuAZN6lHxwpVVBlwLVdzo_WDlNI/edit?usp=sharing">Participation Guidelines</a>. 
+            <hr>
+          </div>
+        </div>
+      </div>
+  </section>
+  <section id="method">
+    <div class="container">
+      <div class="row method-container">
+        <div class="section-header">
+          <div class="col-lg-12 col-md-12">
+            <h2>Phases and Timeline</h2>
+            <ul>
+              <li><b>Minival Phase:</b>
+                The purpose of this phase to make sure your policy can be successfully submitted and
+                evaluated. Participants are expected to download our <a
+                  href="https://github.com/StanfordVL/BehaviorChallenge2021">starter code</a> and submit a baseline
+                policy, even a trivial one, to our evaluation server to verify their entire pipeline is correct.
+              <li><b>Dev Phase:</b>
+                In this phase, participants will develop their solutions. Solutions can be submitted and to be evaluated on the
+                dataset <b>dev</b> split and the leaderboard will be updated within 24 hours. We will provide some quota for submissions per participant.
+              </li>
+              <li><b> Evaluation Phase:</b> This is the final stage of the challenge and the one that will decide the ranking. Participants are expected to submit a maximum of 5 solutions during the last 15 days of the
+                challenge. The solutions will be evaluated on the dataset <b>test</b> split and the results will NOT be
+                made available until the end of the challenge.
+              </li>
+            </ul>
+
+          <div class="col-lg-12 col-md-12">
+
+            <style>
+              table {
+                border-collapse: collapse;
+                width: 100%;
+              }
+
+              th,
+              td {
+                text-align: left;
+                padding: 6px;
+              }
+
+              tr:nth-child(odd) {
+                background-color: #f2f2f2;
+              }
+            </style>
+
+            <table style="width:50%">
+              <tr>
+                <td>Challenge Launched</td>
+                <td>July 17, 2021</td>
+              </tr>
+              <tr>
+                <td>EvalAI Leaderboard Open, Dev Phase Starts</td>
+                <td>August 15, 2021</td>
+              </tr>
+              <tr>
+                <td>Challenge Evaluation Phase Starts</td>
+                <td>September 15, 2021</td>
+              </tr>
+
+              <tr>
+                <td>Challenge Evaluation Phase Ends</td>
+                <td>October 10, 2021</td>
+              </tr>
+              <tr>
+                <td>Winner Demo</td>
+                <td>October 17, 2021</td>
+              </tr>
+            </table>
+            <hr>
+          </div>
+        </div>
+      </div>
+  </section>
+
+  
   <!--       <div class="row method-container">
           <div class="section-header">
             <div class="col-lg-12 col-md-12">
