--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="row method-container">
           <div class="section-header">
             <div class="col-lg-12 col-md-12">
-              <h2>About the Project</h2>
+              <h2>About the Challenge</h2>
               <p class="section-description">
                 A primary goal of embodied AI research is to develop intelligent agents that can assist humans in their everyday lives in activities like washing dishes or cleaning floors. While recent years we have seen excellent new benchmarks that helped the field, they are usually restricted to a few tasks, short horizon or in simplified scenarios. Solving real-world challenges requires a new benchmark with realistic, diverse, and complex activities. We present BEHAVIOR, a benchmark with the 100 household activities that represent a new challenge for embodied AI solutions.
               </p>
