--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               </p>
   
               <p class="section-description">
-                BEHAVIOR is a challenge <b>in simulation</b> where embodied agents make continuous full-body control decisions based on sensor information. Agents need to navigate and manipulate the simulated environment with the goal of acomplishing 100 household activities (see <a href="media/mosaic_behavior.jpg">here</a> all the activities in pairs of simulated and real-world images, or <a href="activity_list.html">here</a> for the complete list of activities). BEHAVIOR tests the ability to perceive the environment, plan, and execute complex long-horizon activities that involve multiple objects, rooms, and state transitions, all with the reproducibility, safety and observability offered by a realistic physics simulation.
+              <b>BEHAVIOR is a challenge in simulation where embodied agents make continuous full-body control decisions based on sensor information.</b> Agents need to navigate and manipulate the simulated environment with the goal of acomplishing 100 household activities (see <a href="media/mosaic_behavior.jpg">here</a> all the activities in pairs of simulated and real-world images, or <a href="activity_list.html">here</a> for the complete list of activities). BEHAVIOR tests the ability to perceive the environment, plan, and execute complex long-horizon activities that involve multiple objects, rooms, and state transitions, all with the reproducibility, safety and observability offered by a realistic physics simulation.
               </p>
   
               <p class="section-description">
