minor typos fixed

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
               </p>
   
               <p class="section-description">
-              <b>BEHAVIOR is a challenge in simulation where embodied agents make continuous full-body control decisions based on sensor information.</b> Agents need to navigate and manipulate the simulated environment with the goal of acomplishing 100 household activities (see <a href="media/mosaic_behavior.jpg">here</a> all the activities in pairs of simulated and real-world images, or <a href="activity_list.html">here</a> for the complete list of activities). BEHAVIOR tests the ability to perceive the environment, plan, and execute complex long-horizon activities that involve multiple objects, rooms, and state transitions, all with the reproducibility, safety and observability offered by a realistic physics simulation.
+              <b>BEHAVIOR is a challenge in simulation where embodied agents make continuous full-body control decisions based on sensor information.</b> Agents need to navigate and manipulate the simulated environment with the goal of accomplishing 100 household activities (see <a href="media/mosaic_behavior.jpg">here</a> all the activities in pairs of simulated and real-world images, or <a href="activity_list.html">here</a> for the complete list of activities). BEHAVIOR tests the ability to perceive the environment, plan, and execute complex long-horizon activities that involve multiple objects, rooms, and state transitions, all with the reproducibility, safety and observability offered by a realistic physics simulation.
               </p>
   
               <p class="section-description">
-                The results for this first edition of BEHAVIOR will be presented at ICCV21 in October 17th. Together with the announcement of the ranking, we will hold an exciting workshop on embodied AI interactive problems for long horizon activities, with an exciting set of world-renowed speakers from the field. Check our <a href="#workshop_speakers">list of speakers</a>.
+                The results for this first edition of BEHAVIOR will be presented at ICCV21 on October 17th. Together with the announcement of the ranking, we will hold an exciting workshop on embodied AI interactive problems for long horizon activities, with an exciting set of world-renowned speakers from the field. Check our <a href="#workshop_speakers">list of speakers</a>.
               </p>
             </div>
           </div>
@@ -127,7 +127,7 @@
           <div class="col-lg-12 col-md-12">
             <h2>Getting Started</h2>
             Do you want to participate? Register in our <a href="https://eval.ai/web/challenges/challenge-page/1190">EvalAI site</a>
-             and start downloading and installing the required infrastructure: <a href="http://svl.stanford.edu/igibson/docs/installation.html">a new version of iGibson</a>, our simulation environment for interactive tasks, extended now to new object states for BEHAVIOR, the BEHAVIOR Dataset of Objects and the  iGibson2.0 Dataset of Scenes (combined in our <a href="https://storage.googleapis.com/gibson_scenes/behavior_data_bundle.zip">participation bundle</a>), with object and house models to participate in the challenge, and <a href="https://github.com/StanfordVL/BehaviorChallenge2021/">our starter code</a>, with examplest to train againts in the tasks. If you want to use human demonstrations to start developing your solutions, you can also download <a href="human_demonstrations/human_demonstrations.html">the BEHAVIOR Dataset of Human Demonstrations</a> in virtual reality. For more details, please visit our <a href="https://docs.google.com/document/d/1u2m9Ld6Qo3eG-fvCzuAZN6lHxwpVVBlwLVdzo_WDlNI/edit?usp=sharing">Participation Guidelines</a>. 
+             and start downloading and installing the required infrastructure: <a href="http://svl.stanford.edu/igibson/docs/installation.html">a new version of iGibson</a>, our simulation environment for interactive tasks, extended now to new object states for BEHAVIOR, the BEHAVIOR Dataset of Objects and the  iGibson2.0 Dataset of Scenes (combined in our <a href="https://storage.googleapis.com/gibson_scenes/behavior_data_bundle.zip">participation bundle</a>), with object and house models to participate in the challenge, and <a href="https://github.com/StanfordVL/BehaviorChallenge2021/">our starter code</a>, with examples to train against in the tasks. If you want to use human demonstrations to start developing your solutions, you can also download <a href="human_demonstrations/human_demonstrations.html">the BEHAVIOR Dataset of Human Demonstrations</a> in virtual reality. For more details, please visit our <a href="https://docs.google.com/document/d/1u2m9Ld6Qo3eG-fvCzuAZN6lHxwpVVBlwLVdzo_WDlNI/edit?usp=sharing">Participation Guidelines</a>. 
             <hr>
           </div>
         </div>
@@ -141,7 +141,7 @@
             <h2>Phases and Timeline</h2>
             <ul>
               <li><b>Minival Phase:</b>
-                The purpose of this phase to make sure your policy can be successfully submitted and
+                The purpose of this phase is to make sure your policy can be successfully submitted and
                 evaluated. Participants are expected to download our <a
                   href="https://github.com/StanfordVL/BehaviorChallenge2021">starter code</a> and submit a baseline
                 policy, even a trivial one, to our evaluation server to verify their entire pipeline is correct.
@@ -364,7 +364,7 @@
               <h2>References</h2>
               <hr>
         <p style="margin-left: 40px">[1] <a target="blank" href="https://arxiv.org/abs/2012.02924">iGibson 1.0: A Simulation Environment 
-        for Interactive Tasks in Large Realistic Scenes.</a>. Bokui Shen*, Fei Xia*, Chengshu Li*, Roberto Martín-Martín*, 
+        for Interactive Tasks in Large Realistic Scenes.</a> Bokui Shen*, Fei Xia*, Chengshu Li*, Roberto Martín-Martín*, 
         Linxi Fan, Guanzhi Wang, Shyamal Buch, Claudia D'Arpino, Sanjana Srivastava, Lyne P Tchapmi, Micael E Tchapmi, 
         Kent Vainio, Li Fei-Fei, Silvio Savarese, IROS 2021.</p>  
         <p style="margin-left: 40px">[2] <a target="blank" href="https://ieeexplore.ieee.org/abstract/document/8954627/">Interactive
