--- a/index.html
+++ b/index.html
@@ -357,17 +357,20 @@
     <section id="method">
       <div class="container">
         <div class="row method-container">
+  
           <div class="section-header">
             <div class="col-lg-12 col-md-12">
   
               <h2>References</h2>
-              <p style="margin-left: 20px">[1] <a target="blank" href="https://arxiv.org/abs/2108.03332">BEHAVIOR: Benchmark for Everyday Household Activities in Virtual, Interactive, and Ecological Environments.</a> Sanjana Srivastava, Chengshu Li, Michael Lingelbach, Roberto Martín-Martín, Fei Xia, Kent Vainio, Zheng Lian, Cem Gokmen, Shyamal Buch, C. Karen Liu, Silvio Savarese, Hyowon Gweon, Jiajun Wu, Li Fei-Fei.</p>  
-              <p style="margin-left: 20px">[2] <a target="blank" href="https://arxiv.org/abs/2108.03272">iGibson 2.0: Object-Centric Simulation for Robot Learning of Everyday Household Tasks
-              </a> Chengshu Li, Fei Xia, Roberto Martín-Martín, Michael Lingelbach, Sanjana Srivastava, Bokui Shen, Kent Vainio, Cem Gokmen, Gokul Dharan, Tanish Jain, Andrey Kurenkov, C. Karen Liu, Hyowon Gweon, Jiajun Wu, Li Fei-Fei, Silvio Savarese.</p>        
-              <p style="margin-left: 20px">[3] <a target="blank" href="https://arxiv.org/abs/2012.02924">iGibson 1.0: A Simulation Environment 
-              for Interactive Tasks in Large Realistic Scenes.</a> Bokui Shen*, Fei Xia*, Chengshu Li*, Roberto Martín-Martín*, 
-              Linxi Fan, Guanzhi Wang, Shyamal Buch, Claudia D'Arpino, Sanjana Srivastava, Lyne P Tchapmi, Micael E Tchapmi, 
-              Kent Vainio, Li Fei-Fei, Silvio Savarese, IROS 2021.</p>  
+              <hr>
+        <p style="margin-left: 40px">[1] <a target="blank" href="https://arxiv.org/abs/2012.02924">iGibson 1.0: A Simulation Environment 
+        for Interactive Tasks in Large Realistic Scenes.</a> Bokui Shen*, Fei Xia*, Chengshu Li*, Roberto Martín-Martín*, 
+        Linxi Fan, Guanzhi Wang, Shyamal Buch, Claudia D'Arpino, Sanjana Srivastava, Lyne P Tchapmi, Micael E Tchapmi, 
+        Kent Vainio, Li Fei-Fei, Silvio Savarese, IROS 2021.</p>  
+        <p style="margin-left: 40px">[2] <a target="blank" href="https://ieeexplore.ieee.org/abstract/document/8954627/">Interactive
+            Gibson Benchmark (iGibson 0.5): A Benchmark for Interactive Navigation in Cluttered Environments</a>. Fei Xia, William B.
+          Shen, Chengshu Li, Priya Kasimbeg, Micael Tchapmi, Alexander Toshev, Roberto Martín-Martín, and Silvio Savarese.
+          RA-L, ICRA 2020.</p>
             </div>
           </div>
         </div>
