Re-fixed image issues

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
       <div class="row">
         <div class="site-logo2">
-          <img height="45px" src="http://svl.stanford.edu//assets/images/c88c46b9e14bf897e57e597109c97005.png"> </img>
+          <img height="45px" src="media/logo.png"> </img>
           <a class="brand">BEHAVIOR Challenge @ ICCV 2021</a>
           <div>
             <a class="brand">
@@ -318,13 +318,13 @@
             <div class="row">
               <div class="col-xs-1 authornames">
                 <a href="http://chengshuli.me" align="middle">
-                  <img src="http://svl.stanford.edu/assets/img/square/chengshu.jpg" class="img-circle img-responsive">
+                  <img src="media/chengshu.jpg" class="img-circle img-responsive">
                   <font size="3">Chengshu Li</font>
                 </a>
               </div>
               <div class="col-xs-1 authornames">
                 <a href="https://www.linkedin.com/in/sanjana-srivastava5/" align="middle">
-                  <img src="http://svl.stanford.edu/igibson/images/sanjana.jpg" class="img-circle img-responsive">
+                  <img src="media/sanjana.jpg" class="img-circle img-responsive">
                   <font size="3">Sanjana Srivastava</font>
                 </a>
               </div>
@@ -337,14 +337,14 @@
               </div>
               <div class="col-xs-1 authornames">
                 <a href="http://fxia.me" align="middle">
-                  <img src="http://svl.stanford.edu/assets/img/square/fei_xia.png" class="img-circle img-responsive">
+                  <img src="media/fei_xia.png" class="img-circle img-responsive">
                   <font size="3">Fei Xia</font>
                 </a>
               </div>
 
               <div class="col-xs-1 authornames">
                 <a href="https://robertomartinmartin.com/" align="middle">
-                  <img src="http://svl.stanford.edu/assets/img/square/roberto_martinmartin.jpg"
+                  <img src="media/roberto_martinmartin.jpg"
                     class="img-circle img-responsive">
                   <font size="3">Roberto Martín-Martín</font>
                 </a>
@@ -357,7 +357,7 @@
               </div>
               <div class="col-xs-1 authornames">
                 <a href="https://cs.stanford.edu/~shyamal" align="middle">
-                  <img src="http://vision.stanford.edu/img/shyamal.jpg" class="img-circle img-responsive">
+                  <img src="media/shyamal.jpg" class="img-circle img-responsive">
                   <font size="3">Shyamal Buch</font>
                 </a>
               </div>
@@ -371,7 +371,7 @@
               </div>
               <div class="col-xs-1 authornames">
                 <a href="http://cvgl.stanford.edu/silvio/" align="middle">
-                  <img src="http://pair.stanford.edu/cavin/photos/silvio_savarese.jpg"
+                  <img src="media/silvio_savarese.jpg"
                     class="img-circle img-responsive">
                   <font size="3">Silvio Savarese</font>
                 </a>
