--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="row method-container">
         <div class="section-header">
           <div class="col-lg-12 col-md-12">
-            <h2>What makes BEHAVIOR special?</h2>
+            <h2>What is different in BEHAVIOR?</h2>
             <div class="row">
               <div class="col-lg-4 col-md-12">
                 <div class="box2 intro">
