fixed logo spacing, added menu collapse feature

--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
       </div>
 
       <!-- Navbar -->
-
-      <div class="row">
-        <ul id="pages">
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu">
+            <i class="fa fa-bars"></i>
+          </button>
+        </div>
+      <div class="collapse navbar-collapse" id="menu">
+        <ul id="options">
           <li><a href="index.html">Home</a></li>
           <li><a
               href="https://docs.google.com/document/d/1u2m9Ld6Qo3eG-fvCzuAZN6lHxwpVVBlwLVdzo_WDlNI/edit?usp=sharing">Participant Guide</a>
