--- a/index.html
+++ b/index.html
@@ -126,10 +126,13 @@
             <div class="row">
               <div class="col-lg-4 col-md-12">
                 <div class="box2 intro">
-                  <h4 class="title"><b>100 Household Activities in Realistic Simulated Homes</b></h4>
-                  <a href="media/mosaic_behavior.jpg">
-                    <img src="media/beha.gif" width=300 height=180> </img>
-                  </a>
+                  <h4 class="title"><b>100 Household Activities in <br>Realistically Simulated Homes</b></h4>
+                  <!-- <img src="media/behav_web1.mp4" width=300 height=180> </img> -->
+                  <video autoplay loop muted width="300">
+                      <source src="media/behav_web1.mp4"
+                              type="video/mp4">
+                      Sorry, your browser doesn't support embedded videos.
+                  </video>
                 </div>
               </div>
               <div class="col-lg-4 col-md-12">
@@ -146,7 +149,7 @@
               </div>
             </div>
             <ul>
-              <li><b>100 Household Activities in Realistic Simulated Homes</b>
+              <li><b>100 Household Activities in Realistically Simulated Homes</b>
                 including cleaning, preparing food, tidying, polishing, installing elements, etc. The activities obtained from the American Time Use Survey and 
                 approximate the real distribution of tasks performed by humans in their everyday lives.
               </li>
