added video1 no audio

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   <h4 class="title"><b>100 Household Activities in <br>Realistically Simulated Homes</b></h4>
                   <!-- <img src="media/behav_web1.mp4" width=300 height=180> </img> -->
                   <video autoplay loop muted width="300">
-                      <source src="media/behav_web1.mp4"
+                      <source src="media/behav_web1_na.mp4"
                               type="video/mp4">
                       Sorry, your browser doesn't support embedded videos.
                   </video>
