--- a/index.html
+++ b/index.html
@@ -144,7 +144,11 @@
               <div class="col-lg-4 col-md-12">
                 <div class="box2 intro">
                   <h4 class="title"><b>More than Pick-and-Place</b></h4>
-                  <img src="media/sliced.gif" width=210 height=210> </img>
+                  <video autoplay loop muted width="300">
+                      <source src="media/state_changes.mp4"
+                              type="video/mp4">
+                      Sorry, your browser doesn't support embedded videos.
+                  </video>
                 </div>
               </div>
             </div>
