--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             </a>
           </div>
         </div>
+
+
+        <!-- /.Navbar-collapse -->
       </div>
 
       <!-- Navbar -->
@@ -54,7 +57,7 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu">
             <i class="fa fa-bars"></i>
           </button>
-      </div>
+        </div>
       <div class="collapse navbar-collapse" id="menu">
         <ul id="options">
           <li><a href="index.html">Home</a></li>
