--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 
 <body>
   <!-- Header -->
-
+  
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="row">
+      <div class="col lg-12">
         <div class="site-logo2">
           <img height="45px" src="media/logo.png"> </img>
           <a class="brand">BEHAVIOR Challenge @ ICCV 2021</a>
@@ -51,6 +52,7 @@
 
         <!-- /.Navbar-collapse -->
       </div>
+      </div>
 
       <!-- Navbar -->
       <div class="navbar-header">
@@ -59,7 +61,7 @@
           </button>
         </div>
       <div class="collapse navbar-collapse" id="menu">
-        <ul id="options">
+        <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">Home</a></li>
           <li><a
               href="https://docs.google.com/document/d/1u2m9Ld6Qo3eG-fvCzuAZN6lHxwpVVBlwLVdzo_WDlNI/edit?usp=sharing">Participant Guide</a>
@@ -70,6 +72,7 @@
 
         </ul>
       </div>
+      
     </div>
 
   </nav>
