--- a/index.html
+++ b/index.html
@@ -142,12 +142,17 @@
               <div class="col-lg-4 col-md-12">
                 <div class="box2 intro">
                   <h4 class="title"><b>Decision Making based on Onboard Sensing for Navigation and Manipulation</b></h4>
-                  <img src="media/tpv.jpg" width=210 height=210> </img>
+                  <!-- <img src="media/tpv.jpg" width=210 height=210> </img> -->
+                  <video autoplay loop muted width="300">
+                      <source src="media/behav_web2.mp4"
+                              type="video/mp4">
+                      Sorry, your browser doesn't support embedded videos.
+                  </video>
                 </div>
               </div>
               <div class="col-lg-4 col-md-12">
                 <div class="box2 intro">
-                  <h4 class="title"><b>More than Pick-and-Place</b></h4>
+                  <h4 class="title"><b>More Complex Interactions<br>than only Pick-and-Place</b></h4>
                   <video autoplay loop muted width="300">
                       <source src="media/state_changes.mp4"
                               type="video/mp4">
