Center date and time, fix indent

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>BEHAVIOR Challenge 2021</title>
 
   <!-- Bootstrap -->
-  <link href="css/bootstrap.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/animate.min.css" rel="stylesheet">
   <link href="css/animate.css" rel="stylesheet" />
   <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -200,6 +200,8 @@
     <div class="container">
       <div class="row method-container">
         <div class="section-header">
+          <div class="col-lg-12 col-md-12">
+
           <h2>Phases and Timeline</h2>
             <ul>
               <li><b>Challenge Launched:</b>
@@ -212,12 +214,15 @@
               <li><b> Evaluation Phase:</b> This phase decides the ranking. Participants will submit their solutions, we will evaluate them and provide the results in 24 hours to each participant only (the results will NOT be made public until the end of the challenge). 
               </li>
             </ul>
+          </div>
+          <center>
           <div class="col-lg-12 col-md-12">
 
             <style>
               table {
                 border-collapse: collapse;
                 width: 100%;
+                justify-content: center;
               }
 
               th,
@@ -256,6 +261,7 @@
             </table>
             <hr>
           </div>
+          </center>
         </div>
       </div>
   </section>
