--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
               <li><b>Challenge Launched:</b>
                 Teams are able to download all the elements that compose the challenge: the datasets (of objects, scenes, human demonstrations and activity definitions) and the simulation environment iGibson 2.0 that includes the evaluation code.
               </li>
+              <li><b>Minival Phase:</b>
+                In this phase, participants can test the submission pipeline. The goal is to make sure the docker image follows our format and can be successfully evaluated. We will evaluate the solution and update the results on the leaderboard.
+              </li>
               <li><b>Dev Phase:</b>
                 In this phase, participants can develop their solutions, evaluate them, and send their logs to be verified. Solutions can evaluated on the
                 <b>dev</b> split of the activity instances. The leaderboard will be updated within 24 hours after the verification of the evaluation logs.
@@ -242,12 +245,12 @@
                 <td>July 17, 2021</td>
               </tr>
               <tr>
-                <td>Dev Phase Starts</td>
+                <td>Minival and Dev Phase Starts</td>
                 <td>August 15, 2021</td>
               </tr>
               <tr>
-                <td>Dev Phase Ends, Evaluation Phase Starts</td>
-                <td>September 15, 2021</td>
+                <td>Minival Dev Phase Ends, Evaluation Phase Starts</td>
+                <td>October 3, 2021</td>
               </tr>
 
               <tr>
