--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <td>August 15, 2021</td>
               </tr>
               <tr>
-                <td>Minival Dev Phase Ends, Evaluation Phase Starts</td>
+                <td>Minival and Dev Phase Ends, Evaluation Phase Starts</td>
                 <td>October 3, 2021</td>
               </tr>
 
