--- a/index.html
+++ b/index.html
@@ -208,13 +208,12 @@
                 Teams are able to download all the elements that compose the challenge: the datasets (of objects, scenes, human demonstrations and activity definitions) and the simulation environment iGibson 2.0 that includes the evaluation code.
               </li>
               <li><b>Minival Phase:</b>
-                In this phase, participants can test the submission pipeline. The goal is to make sure the docker image follows our format and can be successfully evaluated. We will evaluate the solution and update the results on the leaderboard.
+                In this phase, participants can test the submission pipeline. The goal is to make sure that their docker image follows our format and can be successfully evaluated in the last phase of the challenge. We will test their solution in one activity instance (minival split), and update the results on the leaderboard.
               </li>
               <li><b>Dev Phase:</b>
-                In this phase, participants can develop their solutions, evaluate them, and send their logs to be verified. Solutions can evaluated on the
-                <b>dev</b> split of the activity instances. The leaderboard will be updated within 24 hours after the verification of the evaluation logs.
+                In this phase, participants can develop their solutions, evaluate them on their own with the evaluation code, and send their logs to be verified. Solutions should be evaluated on the <b>dev</b> split of the activity instances. The leaderboard will be updated within 24 hours after the verification of the evaluation logs.
               </li>
-              <li><b> Evaluation Phase:</b> This phase decides the ranking. Participants will submit their solutions, we will evaluate them and provide the results in 24 hours to each participant only (the results will NOT be made public until the end of the challenge). 
+              <li><b> Evaluation Phase:</b> This phase decides the ranking. Participants will submit their solutions, we will evaluate them and provide the results in 24 hours confidentially to each participant (the results will NOT be made public until the end of the challenge). We will evaluate on a test split with unseen activity instances.
               </li>
             </ul>
           </div>
