--- a/index.html
+++ b/index.html
@@ -431,6 +431,17 @@
           </div>
         </div>
   </section>
+  <br><br>
+  <section id="method">
+	  <div class="container">
+		<div class="box4 intro">
+			<div class="icon2"><i class="fas fa-envelope"></i></div>
+			<h4 class="title"><b>Join our mailing list!</b></h4>
+			<p>Sign up <a href="https://groups.google.com/g/behavior-mailing-list">here</a>  for latest updates on the challenge and benchmark. </p>
+		</div>
+		  
+	  </div>
+  </section>
   <section id="method">
     <div class="container">
       <div class="row method-container">
