--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
               Fei-Fei, Silvio Savarese.</p>
             <p style="margin-left: 20px">[3] <a target="blank" href="https://arxiv.org/abs/2012.02924">iGibson 1.0: A
                 Simulation Environment
-                for Interactive Tasks in Large Realistic Scenes.</a> Bokui Shen*, Fei Xia*, Chengshu Li*, Roberto
-              Martín-Martín*,
+                for Interactive Tasks in Large Realistic Scenes.</a> Bokui Shen, Fei Xia, Chengshu Li, Roberto
+              Martín-Martín,
               Linxi Fan, Guanzhi Wang, Shyamal Buch, Claudia D'Arpino, Sanjana Srivastava, Lyne P Tchapmi, Micael E
               Tchapmi,
               Kent Vainio, Li Fei-Fei, Silvio Savarese, IROS 2021.</p>
