--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 	<div class="container">
 	  <div class="box4 intro">
 		  <div class="icon2"><i class="fas fa-envelope"></i></div>
-		  <h4 class="title"><b>Join our mailing list!</b></h4>
+		  <h4 class="title"><b>Join our community!</b></h4>
 		  <p>Sign up <a href="https://groups.google.com/g/behavior-mailing-list"><b>here</b></a>  for latest updates on the challenge and benchmark. </p>
 	  </div>
 	</div>
