--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<h2>BEHAVIOR</h2>
 					<p>Benchmark for Everyday Household Activities in Virtual, Interactive, and Ecological Environments</p>
 					<ul class="actions special">
-						<li><a href="https://behavior.stanford.edu/" class="button primary">Sign Up for ICCV 2021</a></li>
+						<li><a href="iccv.html" class="button primary">Sign Up for ICCV 2021</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
 					</ul>
 				</section>
