annotation html added

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li><a href="https://eval.ai/web/challenges/challenge-page/1190/overview">Registration</a></li>
           <li><a href="https://github.com/StanfordVL/BehaviorChallenge2021">Code</a></li>
           <li><a href="activity_list.html">Activity List</a></li>
-
+          <li><a href="annotation_interface.html">Annotation Interface</a></li>
         </ul>
       </div>
       
