--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
           <li><a href="https://eval.ai/web/challenges/challenge-page/1190/overview">Registration</a></li>
           <li><a href="https://github.com/StanfordVL/BehaviorChallenge2021">Code</a></li>
           <li><a href="activity_list.html">Activity List</a></li>
+          <li><a href="#schedule">Schedule</a></li>
+
 
         </ul>
       </div>
@@ -277,6 +279,103 @@
 	  </div>
 	</div>
 </section>
+
+<section id="schedule">
+  <div class="container">
+    <div class="row method-container">
+      <div class="section-header">
+        <div class="col-lg-12 col-md-12">
+          <hr>
+
+        <h2>Workshop Schedule</h2>
+         The workshop is happening at ICCV 2021 on Oct 17, 13:00-18:00 EDT. The detailed schedule is listed as below.
+        </div>
+        <center>
+        <div class="col-lg-12 col-md-12">
+
+          <style>
+            table {
+              border-collapse: collapse;
+              width: 100%;
+              justify-content: center;
+            }
+
+            th,
+            td {
+              text-align: left;
+              padding: 6px;
+            }
+
+            tr:nth-child(odd) {
+              background-color: #f2f2f2;
+            }
+          </style>
+
+          <table style="width:60%">
+            <tr>
+              <td>Time</td>
+              <td>Speaker </td>
+              <td>Title </td>
+            </tr>
+            <tr>
+              <td>13:00-13:05</td>
+              <td> Organizers </td>
+              <td>Opening Remarks </td>
+            </tr>
+            <tr>
+              <td>13:05-13:40</td>
+              <td>Hyowon Gweon </td>
+              <td>TBA</td>
+            </tr>
+            <tr>
+              <td>13:40-14:25</td>
+              <td>Leslie Kaelbling </td>
+              <td>TBA</td>
+            </tr>
+            <tr>
+              <td>14:25-15:00</td>
+              <td>Kristen Grauman </td>
+              <td>TBA</td>
+            </tr>
+            <tr>
+              <td>15:00-15:20</td>
+              <td>Organizers </td>
+              <td> Presenting BEHAVIOR Challenge, Winner Announcement </td>
+            </tr>
+            <tr>
+              <td>15:20-15:40</td>
+              <td> </td>
+              <td> Coffee Break </td>
+            </tr>
+            <tr>
+              <td>15:40-16:15</td>
+              <td>Chelsea Finn</td>
+              <td> TBA </td>
+            </tr>
+            <tr>
+              <td>16:15-16:50</td>
+              <td>Jeff Zacks </td>
+              <td> TBA </td>
+            </tr>
+            <tr>
+              <td>16:50-17:25</td>
+              <td>Jeannette Bohg </td>
+              <td> TBA </td>
+            </tr>
+            <tr>
+              <td>17:25-18:00</td>
+              <td>Karen Liu </td>
+              <td> TBA </td>
+
+            </tr>
+
+          </table>
+        </div>
+        </center>
+      </div>
+    </div>
+</section>
+
   <section id="method">
     <div class="container">
       <div class="row method-container">
