add some titles

--- a/index.html
+++ b/index.html
@@ -315,58 +315,68 @@
             <tr>
               <td>Time</td>
               <td>Speaker </td>
+              <td>Live/Recorded </td>
               <td>Title </td>
             </tr>
             <tr>
               <td>13:00-13:05</td>
               <td> Organizers </td>
+              <td>Live</td>
               <td>Opening Remarks </td>
             </tr>
             <tr>
               <td>13:05-13:40</td>
               <td>Hyowon Gweon </td>
-              <td>TBA</td>
+              <td>Live</td>
+              <td>Towards socially intelligent, embodied AI: Insights from how humans learn and help others learn</td>
             </tr>
             <tr>
               <td>13:40-14:25</td>
               <td>Leslie Kaelbling </td>
-              <td>TBA</td>
+              <td>Live</td>
+              <td>Where's the Fork? Representation and Reasoning for a Household Robot</td>
             </tr>
             <tr>
               <td>14:25-15:00</td>
               <td>Kristen Grauman </td>
               <td>TBA</td>
+              <td>TBA</td>
             </tr>
             <tr>
               <td>15:00-15:20</td>
               <td>Organizers </td>
+              <td>Live</td>
               <td> Presenting BEHAVIOR Challenge, Winner Announcement </td>
             </tr>
             <tr>
               <td>15:20-15:40</td>
+              <td> </td>
               <td> </td>
               <td> Coffee Break </td>
             </tr>
             <tr>
               <td>15:40-16:15</td>
               <td>Chelsea Finn</td>
+              <td>Live</td>
               <td> TBA </td>
             </tr>
             <tr>
               <td>16:15-16:50</td>
               <td>Jeff Zacks </td>
+              <td>Recorded</td>
               <td> TBA </td>
             </tr>
             <tr>
               <td>16:50-17:25</td>
               <td>Jeannette Bohg </td>
               <td> TBA </td>
+              <td> TBA </td>
             </tr>
             <tr>
               <td>17:25-18:00</td>
               <td>Karen Liu </td>
               <td> TBA </td>
-
+              <td> TBA </td>
             </tr>
 
           </table>
