broader. added coauthors to jeff

--- a/index.html
+++ b/index.html
@@ -311,12 +311,12 @@
             }
           </style>
 
-          <table style="width:60%">
+          <table style="width:80%">
             <tr>
-              <td>Time</td>
-              <td>Speaker </td>
-              <td>Live/Recorded </td>
-              <td>Title </td>
+              <td><b>Time&nbsp;&nbsp;&nbsp;&nbsp;(EST)</b></td>
+              <td><b>Speaker </b></td>
+              <td><b>Live/Recorded </b></td>
+              <td><b>Title of the talk </b></td>
             </tr>
             <tr>
               <td>13:00-13:05</td>
@@ -362,7 +362,7 @@
             </tr>
             <tr>
               <td>16:15-16:50</td>
-              <td>Jeff Zacks </td>
+              <td>Jeff Zacks</br>Matthew&nbsp;Bezdek</br>Tan Nguyen</td>
               <td>Recorded</td>
               <td> TBA </td>
             </tr>
