add more schedules

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             <tr>
               <td>14:25-15:00</td>
               <td>Kristen Grauman </td>
-              <td>TBA</td>
+              <td>Recorded</td>
               <td>TBA</td>
             </tr>
             <tr>
@@ -369,8 +369,8 @@
             <tr>
               <td>16:50-17:25</td>
               <td>Jeannette Bohg </td>
-              <td> TBA </td>
-              <td> TBA </td>
+              <td> Live </td>
+              <td> Robots Learning Activities of Daily Living by Watching Humans </td>
             </tr>
             <tr>
               <td>17:25-18:00</td>
