--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
               <td>16:15-16:50</td>
               <td>Jeff Zacks</br>Matthew&nbsp;Bezdek</br>Tan Nguyen</td>
               <td>Recorded</td>
-              <td> TBA </td>
+              <td> The Multi-angle Extended Three-D Activities Corpus - A Resource for Human and Robot Event Understanding </td>
             </tr>
             <tr>
               <td>16:50-17:25</td>
