--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
             <tr>
               <td>17:25-18:00</td>
               <td>Karen Liu </td>
-              <td> TBA </td>
-              <td> TBA </td>
+              <td> Recorded </td>
+              <td> Simulating Human Movements for Embodied AI </td>
             </tr>
 
           </table>
