--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
               <td>15:40-16:15</td>
               <td>Chelsea Finn</td>
               <td>Live</td>
-              <td> TBA </td>
+              <td>Compositional Task Generalization in Vision-Based Robotic Manipulation </td>
             </tr>
             <tr>
               <td>16:15-16:50</td>
