fix typo in schedule, add video from zack

--- a/index.html
+++ b/index.html
@@ -331,19 +331,19 @@
               <td>Towards socially intelligent, embodied AI: Insights from how humans learn and help others learn</td>
             </tr>
             <tr>
-              <td>13:40-14:25</td>
+              <td>13:40-14:15</td>
               <td>Leslie Kaelbling </td>
               <td>Live</td>
               <td>Where's the Fork? Representation and Reasoning for a Household Robot</td>
             </tr>
             <tr>
-              <td>14:25-15:00</td>
+              <td>14:15-14:50</td>
               <td>Kristen Grauman </td>
               <td>Recorded</td>
               <td>TBA</td>
             </tr>
             <tr>
-              <td>15:00-15:20</td>
+              <td>14:50-15:20</td>
               <td>Organizers </td>
               <td>Live</td>
               <td> Presenting BEHAVIOR Challenge, Winner Announcement </td>
@@ -364,7 +364,7 @@
               <td>16:15-16:50</td>
               <td>Jeff Zacks</br>Matthew&nbsp;Bezdek</br>Tan Nguyen</td>
               <td>Recorded</td>
-              <td> The Multi-angle Extended Three-D Activities Corpus - A Resource for Human and Robot Event Understanding </td>
+              <td> <a href="https://drive.google.com/file/d/1LTIVflVw7D-6C7cwVIH1PAx_MJWkc7mT/view?usp=sharing">The Multi-angle Extended Three-D Activities Corpus - A Resource for Human and Robot Event Understanding <a></a> </td>
             </tr>
             <tr>
               <td>16:50-17:25</td>
