--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <td>October 10, 2021</td>
               </tr>
               <tr>
-                <td>BEHAVIOR Workshop and Public Announcement of the Winners @ICCV21</td>
+                <td>BEHAVIOR Workshop @ICCV21</td>
                 <td>October 17, 2021</td>
               </tr>
             </table>
@@ -340,13 +340,13 @@
               <td>14:15-14:50</td>
               <td>Kristen Grauman </td>
               <td>Recorded</td>
-              <td>TBA</td>
+              <td>Shaping Agent Behavior with Video of People’s Daily Life Activity</td>
             </tr>
             <tr>
               <td>14:50-15:20</td>
               <td>Organizers </td>
               <td>Live</td>
-              <td> Presenting BEHAVIOR Challenge, Winner Announcement </td>
+              <td> Presenting BEHAVIOR Challenge, Analysis of Baselines </td>
             </tr>
             <tr>
               <td>15:20-15:40</td>
