--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
               <td>17:25-18:00</td>
               <td>Karen Liu </td>
               <td> Recorded </td>
-              <td> Simulating Human Movements for Embodied AI </td>
+              <td> <a href="https://drive.google.com/file/d/1vBiHJOuCDzAnqtNhWg7rFhGF1Gfe4j_I/view?usp=sharing">Simulating Human Movements for Embodied AI</a> </td>
             </tr>
 
           </table>
